Adding functionality to remove answer buttons after the game has finished.

--- a/css/main.css
+++ b/css/main.css
@@ -60,10 +60,9 @@ h1{
     cursor: pointer;
 }
 
-/* #result-display{
-    font-size:x-large;
-    font-weight: bold;
-} */
+.hide {
+    display: none;
+ }
 
 .score{
     font-size:x-large;
