--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ h1{
 #question-text{
     font-size: x-large;
     font-weight: bold;
-    color: darkblue;
+    color: #00008B;
     padding: 20px 20px 20px 20px;
 }
 
@@ -107,9 +107,11 @@ h1{
         flex-direction: column;
         
     }
+
     body{
         background-repeat: repeat;
     }
+
     .answer-button{
         font-size:medium;
         font-weight: bold;
@@ -121,6 +123,7 @@ h1{
         margin: 5px;
         cursor: pointer;
     }
+
     .controls-button{
         font-size:medium;
         font-weight: bold;
@@ -137,39 +140,46 @@ h1{
   @media screen and (max-width: 425px) {
     .game-board{
         display: flex;
-        flex-direction: column;
-        
+        flex-direction: column; 
     }
+
     body{
         background-repeat: repeat;
     }
+
     #question-text{
         font-size:large;
         font-weight: bold;
         color: darkblue;
         padding: 20px 20px 20px 20px;
     }
+
     .score{
         font-size:large;
         font-weight: bold;
     }
+
     h1{
         text-align: center; 
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size:larger;
     }
+
     .possible-answers{
         padding: 5px;
     }
+
     .game-controls{
         padding: 5px;
     }
+
     #question-text{
         font-size:large;
         font-weight: bold;
         color: darkblue;
         padding: 5px 5px 5px 5px;
     }
+
     #out-of{
         font-size:large;
     }
@@ -182,36 +192,44 @@ h1{
         height: 75vh;
         
     }
+
     body{
         background-repeat: repeat;
     }
+
     #question-text{
         font-size:medium;
         font-weight: bold;
         color: darkblue;
         padding: 10px 10px 10px 10px;
     }
+
     .score{
         font-size:medium;
         font-weight: bold;
     }
+
     h1{
         text-align: center; 
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size:large;
     }
+
     .possible-answers{
         padding: 5px;
     }
+
     .game-controls{
         padding: 5px;
     }
+
     #question-text{
-        font-size:large;
+        font-size:medium;
         font-weight: bold;
         color: darkblue;
         padding: 5px 5px 5px 5px;
     }
+
     .answer-button{
         font-size:medium;
         font-weight: bold;
@@ -223,6 +241,7 @@ h1{
         margin: 3px;
         cursor: pointer;
     }
+
     .controls-button{
         font-size:medium;
         font-weight: bold;
@@ -234,6 +253,7 @@ h1{
         margin: 3px;
         cursor: pointer;
     }
+
     #out-of{
         font-size:large;
     }
