--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,19 @@
 h1{
     text-align: center; 
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: darksalmon;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: darkblue;
+    display: inline-block;
+    border: 1px solid darkblue;
+    border-radius: 7px;
+    box-shadow: 0 0 3px 3px;
+    padding: 5px;
 }
+
+.title {
+    text-align: center;
+  }
 
 *{
     font-family: 'Lato', sans-serif;
@@ -264,13 +276,3 @@ h1{
     }
   }
   
-
-
-
-
-
-
-
-
-
-
