--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 h1{
     text-align: center; 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: darksalmon;
+    color: rgb(231, 121, 84);
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: darkblue;
     display: inline-block;
@@ -9,6 +9,7 @@ h1{
     border-radius: 7px;
     box-shadow: 0 0 3px 3px;
     padding: 5px;
+    font-size: xxx-large;
 }
 
 .title {
