--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,11 @@ h1{
 /* Adding responsive design for tablets and phones below: */
 
 @media screen and (max-width: 768px) {
+    h1{
+        text-align: center; 
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size:xx-large;
+    }
     .game-board{
         display: flex;
         flex-direction: column;
